I creat test interface

--- a/index.html
+++ b/index.html
@@ -8,17 +8,38 @@
     <script type="module" src="./src/js/index.js"></script>
 </head>
 <body>
-    <div class="result">
-        <div><span class="result-result"></span></div>
-        <div class="scoreHuman">
-            <p>Your score</p>
-            <p class="score-human"></p>
+    <header>
+        <h3>ROCK - PAPER - SCISSORS</h3>
+    </header>
+
+    <div class="container">
+        <div class="result-conteiner">
+            <div class="result">
+                <div><span class="result-result"></span></div>
+                <div class="human-container">
+                    <span class="icon-user"></span>
+                    <p class="score-human"></p>
+                </div>
+                <div class="computer-container">
+                    <span class="icon-computer"></span>
+                    <p class="score-computer"></p>
+                </div>
+            </div>
         </div>
-        <div class="scoreComputer">
-            <p>Computer score</p>
-            <p class="score-computer"></p>
+        <div class="icons">
+            <img class="rock-icon" src="/src/img/icons8-камень-100.png" alt="" srcset="">
+            <img class="paper-icon" src="/src/img/icons8-матовая-бумага-100.png" alt="" srcset="">
+            <img class="scissors-icon" src="/src/img/icons8-парикмахерские-ножницы-100.png" alt="" srcset="">
         </div>
     </div>
+   
+
+    <footer>
+        <div class="footer-container">
+                <img src="./src/img/icons8-телеграм-50.png" alt="" srcset="">
+                <a href="https://t.me/ramzaii">Telegram</a>
+        </div>
+    </footer>
     
     
 </body>
