add new logic, new interface, new animation

--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 </head>
 <body>
     <header>
-        <h3>ROCK - PAPER - SCISSORS</h3>
+        <div class="logo">
+            <h3>ROCK - PAPER - SCISSORS</h3>
+        </div>
+        <div class="hr">frgefgdg</div>
     </header>
-
     <div class="container">
         <div class="result-container">
                 <div class="human-container">
@@ -25,13 +27,13 @@
         </div>
         <div class="icons">
             <div class="icon">
-                <img id="rock" class="rock-icon" src="/src/img/icons8-камень-100.png" alt="" srcset="">
+                <img id="rock" class="rock-icon" src="/src/img/rock.PNG" alt="" srcset="">
             </div>
             <div class="icon">
-                <img id="paper" class="paper-icon" src="/src/img/icons8-матовая-бумага-100.png" alt="" srcset="">
+                <img id="paper" class="paper-icon" src="/src/img/paper.PNG" alt="" srcset="">
             </div>
             <div class="icon">
-                <img id="scissors" class="scissors-icon" src="/src/img/icons8-парикмахерские-ножницы-100.png" alt="" srcset="">
+                <img id="scissors" class="scissors-icon" src="/src/img/scissors.PNG" alt="" srcset="">
             </div>
         </div>
     </div>
@@ -47,7 +49,6 @@
 
     <footer>
         <div class="footer-container">
-                <img src="./src/img/icons8-телеграм-50.png" alt="" srcset="">
                 <a href="https://t.me/ramzaii">Telegram</a>
         </div>
     </footer>
