Optimized game, render, getComputerChoice and interactiveGema blocks

--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
         </div>
         <div class="icons">
             <div class="icon">
-                <img id="rock" class="rock-icon" src="/src/img/rock.PNG" alt="" srcset="">
+                <img id="rock" class="rock-icon human-choice" src="/src/img/rock.PNG" alt="" srcset="">
             </div>
             <div class="icon">
-                <img id="paper" class="paper-icon" src="/src/img/paper.PNG" alt="" srcset="">
+                <img id="paper" class="paper-icon human-choice" src="/src/img/paper.PNG" alt="" srcset="">
             </div>
             <div class="icon">
-                <img id="scissors" class="scissors-icon" src="/src/img/scissors.PNG" alt="" srcset="">
+                <img id="scissors" class="scissors-icon human-choice" src="/src/img/scissors.PNG" alt="" srcset="">
             </div>
         </div>
     </div>
